--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <header></header>
     <main>
+        <div>
         <h1>Umbrella Academy!</h1>
         <h2>Resenha</h2>
         <p>Uma família disfuncional de super-heróis se reúne para resolver o mistério da morte do pai, a ameaça do apocalipse , viagens no tempo e mais um monte de coisa aleatoria que se casam perfeitamente.</p>
-        <button><a href="https://umbrellaacademy.fandom.com/wiki/Umbrella_Academy_Wiki" target="_blank" rel="noopener noreferrer">WIKI</a></button>
-        <button><a href="https://www.imdb.com/pt/title/tt1312171/" target="_blank" rel="noopener noreferrer">IMDB</a></button>
-        <img src="Umbrella_Logo.png" alt="">
+        <button class="botao1"><a href="https://umbrellaacademy.fandom.com/wiki/Umbrella_Academy_Wiki" target="_blank" rel="noopener noreferrer">WIKI</a></button>
+        <button class="botao2"><a href="https://www.imdb.com/pt/title/tt1312171/" target="_blank" rel="noopener noreferrer">IMDB</a></button>
+        </div>
+        <img class="umbre" src="Umbrella_Logo.png" alt="">
     </main>
 </body>
 </html>
